<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/white"
            app:expandedTitleGravity="top"
            app:expandedTitleMarginBottom="16dp"
            app:expandedTitleMarginEnd="16dp"
            app:expandedTitleMarginStart="96dp"
            app:expandedTitleMarginTop="48dp"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.ScreenTitle"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:title="24 марта 1994">

            <ImageView
                android:id="@+id/platformIcon"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="48dp"
                android:transitionName="@string/platform_icon_transition_name"
                app:layout_collapseMode="none"
                tools:src="@drawable/ic_android" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:titleTextAppearance="@style/TextAppearance.AppCompat.ScreenTitle" />

            <RatingBar
                android:id="@+id/ratingView"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="96dp"
                android:layout_marginTop="82dp"
                android:isIndicator="true"
                android:maxHeight="16dp"
                android:numStars="5"
                android:stepSize="0.1"
                android:theme="@style/RatingBar"
                app:layout_collapseMode="parallax" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="104dp"
        android:paddingTop="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/titleView"
                style="@style/TextAppearance.AppCompat.ItemTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="@id/negativeIcon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Ребята! Верните кэшбэки по братски" />

            <ImageView
                android:id="@+id/negativeIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_attention"
                app:layout_constraintBottom_toBottomOf="@id/titleView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/titleView" />

            <TextView
                android:id="@+id/descView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleView"
                tools:text="Я очень недоволен ребятаю Так дела не делаются. Вы меня сильно бесите. Отписка и дизлайк!!!" />

            <TextView
                android:id="@+id/teamsListTitleView"
                style="@style/TextAppearance.AppCompat.ItemTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:text="@string/teams"
                app:layout_constraintEnd_toEndOf="@id/negativeIcon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/descView" />

            <TextView
                android:id="@+id/changeTeamsButton"
                style="@style/ActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/change_button"
                app:layout_constraintBottom_toBottomOf="@id/teamsListTitleView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/teamsListTitleView" />

            <com.google.android.flexbox.FlexboxLayout
                android:id="@+id/teamsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:flexDirection="row"
                app:flexWrap="wrap"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/teamsListTitleView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/notifyButton"
        style="@style/PrimaryButton"
        android:layout_gravity="center|bottom"
        android:text="@string/notify_teams" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
